--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "useful application building primitives",
     "type": "library",
     "license": "mit",
+    "version": "0.1.1",
     "authors": [
         {
             "name": "cptBurke",
